--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
 
   candles-rest-api:
     build: .
-    image: candles-rest-api
+    image: candles-app
     command: "gunicorn -w 4 -k uvicorn.workers.UvicornWorker app.io.rest_api.main:app -b 0.0.0.0:8000"
     ports:
       - "8000:8000"
@@ -11,6 +11,30 @@ services:
     environment:
       - PG_HOST=db
       - PG_PORT=5432
+
+  candles-task-scheduler:
+    image: candles-app
+    command: "taskiq scheduler app.tasks:scheduler"
+    env_file:
+      - ./.env
+
+  candles-task-worker:
+    image: candles-app
+    command: "taskiq worker app.tasks:broker"
+    env_file:
+      - ./.env
+
+  redis:
+    image: redis:7.2
+    expose:
+      - "6379"
+    healthcheck:
+      test: [ "CMD", "redis-cli", "--raw", "ping" ]
+      interval: 5s
+      retries: 10
+      start_period: 10s
+      timeout: 5s
+
   db:
     image: postgres:16
     env_file:
