--- a/compose.yaml
+++ b/compose.yaml
@@ -1,19 +1,19 @@
 services:
 
-  candles-rest-api:
+  candlestick-service-rest-api:
     build: .
-    image: candles-app
+    image: candlestick-service
     command: "gunicorn -w 4 -k uvicorn.workers.UvicornWorker app.io.rest_api.main:app -b 0.0.0.0:8000"
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     env_file:
       - ./.env
     environment:
       - PG_HOST=db
       - PG_PORT=5432
 
-  candles-task-scheduler:
-    image: candles-app
+  candlestick-service-task-scheduler:
+    image: candlestick-service
     command: "taskiq scheduler app.tasks:scheduler"
     env_file:
       - ./.env
@@ -21,8 +21,8 @@ services:
       - PG_HOST=db
       - PG_PORT=5432
 
-  candles-task-worker:
-    image: candles-app
+  candlestick-service-task-worker:
+    image: candlestick-service
     command: "taskiq worker app.tasks:broker"
     env_file:
       - ./.env
@@ -56,3 +56,13 @@ services:
       - "${PG_PORT}:5432"
     volumes:
       - ./db-data/:/var/lib/postgresql/data
+
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/configs:/etc/nginx/conf.d:ro
+    depends_on:
+      - candlestick-service-rest-api
+    ports:
+      - "80:80"
