--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,11 @@
 services:
 
+  candlestick-service-migrate:
+    image: edwardgordin/candlestick-service
+    command: "cd db_schema && alembic upgrade head"
+
   candlestick-service-rest-api:
-    build: .
-    image: candlestick-service
+    image: edwardgordin/candlestick-service
     command: "gunicorn -w 4 -k uvicorn.workers.UvicornWorker app.io.rest_api.main:app -b 0.0.0.0:8000"
     expose:
       - "8000"
@@ -13,7 +16,7 @@ services:
       - PG_PORT=5432
 
   candlestick-service-task-scheduler:
-    image: candlestick-service
+    image: edwardgordin/candlestick-service
     command: "taskiq scheduler app.tasks:scheduler"
     env_file:
       - ./.env
@@ -22,7 +25,7 @@ services:
       - PG_PORT=5432
 
   candlestick-service-task-worker:
-    image: candlestick-service
+    image: edwardgordin/candlestick-service
     command: "taskiq worker app.tasks:broker"
     env_file:
       - ./.env
