--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ Build:
 Deploy:
   stage: deploy
   script:
-    - ssh -t $NODE_01_USER@$NODE_01_HOST "echo hello"
+    - ssh -t $NODE_01_USER@$NODE_01_HOST "cd candlestick-service && sh deploy.sh"
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
     - if: $CI_COMMIT_TAG
